<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mi_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/mi_new_size"
        android:title="@string/newSize"
        app:showAsAction="never" />
    <item
        android:id="@+id/mi_custom"
        android:title="@string/costumGame"
        app:showAsAction="never" />
    <item
        android:id="@+id/mi_download"
        android:title="@string/downloadGame"
        app:showAsAction="never" />
    <item
        android:id="@+id/mi_signout"
        android:title="@string/signOut"
        app:showAsAction="never" />
</menu>